@startuml

title __COMPOUNDCONTROLLER's Class Diagram__\n

  namespace jp.oist.abcvlib {
    namespace compoundcontroller {
      class jp.oist.abcvlib.compoundcontroller.MainActivity {
          # onCreate()
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace compoundcontroller {
      class jp.oist.abcvlib.compoundcontroller.MainActivity.CustomController {
          ~ actualSpeed : double
          ~ d_s : double
          ~ errorSpeed : double
          ~ setSpeed : double
          + run()
      }
    }
  }
  

  jp.oist.abcvlib.compoundcontroller.MainActivity -up-|> jp.oist.abcvlib.core.AbcvlibActivity
  jp.oist.abcvlib.compoundcontroller.MainActivity +-down- jp.oist.abcvlib.compoundcontroller.MainActivity.CustomController
  jp.oist.abcvlib.compoundcontroller.MainActivity.CustomController -up-|> jp.oist.abcvlib.outputs.AbcvlibController


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
